tests/errors/early_return_type_mismatch.dang
# Early return values must match the declared function return type
pub bad(flag: Boolean!): String! {
  if (flag) {
    return 42
  }
  "ok"
}
